ENH: Initial conversion to Summer School 2026 info

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,18 @@
-name: hackathon-template-github-dev
+name: arm-summer-school-2026-dev
 channels:
   - conda-forge
 dependencies:
   - python=3.11
-  - mystmd
+  - mystmd<1.3.21
   - cookiecutter
+  - act-atmos
+  - jupyterlab
+  - arm_pyart
+  - cartopy
+  - matplotlib
+  - pydda
+  - jaxopt
+  - tensorflow>=2.6
+  - xradar
+  - tensorflow-probability>=0.24
+  - tobac
