BUG: Fixed tag within MyST markdown

--- a/myst.yml
+++ b/myst.yml
@@ -31,6 +31,7 @@ project:
           children:
             - file: preliminary/skills-refresher/swc
     - title: Tutorials
+      children:
         - file: notebooks/act/ACT-Basics-BNF.ipynb
         - file: notebooks/act/act-tower-data.ipynb
         - file: notebooks/pyart/pyart-basics.ipynb
