ADD: update author list with MyST markdown

--- a/myst.yml
+++ b/myst.yml
@@ -11,6 +11,9 @@ project:
     - name: Scott Collis
       orcid: 0000-0002-2303-687X
       github: scollis
+    - name: Max Grover
+      orcid: 0000-0002-0370-8974
+      github: mgrover1
     - name: Mark Spychala
     - name: Patty Campbell
     - name: Sid Gupta
