--- a/myst.yml
+++ b/myst.yml
@@ -15,6 +15,8 @@ project:
       orcid: 0000-0002-0370-8974
       github: mgrover1
     - name: Mark Spychala
+      orcid: 0000-0001-9821-9411
+      github: Metspy
     - name: Patty Campbell
     - name: Sid Gupta
       orcid: 0000-0002-0663-4595
